--- a/ahbottomnavigation/build.gradle
+++ b/ahbottomnavigation/build.gradle
@@ -26,7 +26,7 @@ ext {
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '28.0.0'
+    buildToolsVersion '28.0.1'
 
     defaultConfig {
         minSdkVersion 14
@@ -40,10 +40,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
-    implementation 'com.android.support:design:28.0.0-alpha3'
+    implementation 'com.android.support:design:28.0.0-beta01'
 }
 
 // Place it at the end of the file
