--- a/ahbottomnavigation/build.gradle
+++ b/ahbottomnavigation/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
 
+
+
 ext {
     bintrayRepo = 'maven'
     bintrayName = 'ah-bottom-navigation'
@@ -26,7 +28,7 @@ ext {
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '28.0.1'
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 14
@@ -47,11 +49,15 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:design:28.0.0-beta01'
+    implementation 'com.google.android.material:material:1.0.0'
+
 }
 
 // Place it at the end of the file
 if (project.rootProject.file('local.properties').exists()) {
     apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
     apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+}
+repositories {
+    mavenCentral()
 }
