--- a/ahbottomnavigation/build.gradle
+++ b/ahbottomnavigation/build.gradle
@@ -28,7 +28,7 @@ ext {
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "28.0.3"
+
 
     defaultConfig {
         minSdkVersion 14
@@ -51,7 +51,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha05'
 
 }
 
